--- a/src/Components/Input/Input.module.css
+++ b/src/Components/Input/Input.module.css
@@ -16,7 +16,7 @@
 }
 
 .btnSuccess:hover {
-  background-color: #49ac35 !important;
+  background-color: #e9e9e9 !important;
 }
 
 .btnDefault:hover {
@@ -24,5 +24,5 @@
 }
 
 .test {
-  color: #b4b4b4;
+box-sizing: border-box;
 }
