multi select terminado

--- a/src/Components/Input/Input.module.css
+++ b/src/Components/Input/Input.module.css
@@ -8,11 +8,11 @@
 }
 
 .btnPrimary:hover {
-  background-color: #30a5c2 !important;
+  background-color: #a3e4be !important;
 }
 
 .btnDanger:hover {
-  background-color: #da4242 !important;
+  background-color: #c934ce !important;
 }
 
 .btnSuccess:hover {
