--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,2 @@
 /* add css styles here (optional) */
-
-.test {
-  display: inline-block;
-  margin: 2em auto;
-  border: 2px solid #000;
-  font-size: 2em;
-}
+@import url(https://fonts.googleapis.com/css2?family=Montserrat&display=swap);
