--- a/example/src/index.css
+++ b/example/src/index.css
@@ -2,5 +2,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-color: rgb(255, 250, 244);
+  background-color: rgb(249, 252, 255);
+  border-color: #41bedd0e;
 }
